# miktex

./: CMakeLists.txt  Doxyfile.in  Makefile.am  NEWS  README  README.MiKTeX  README.MiKTeX-Tools  README.unx  README.win  TODO  build.cmd  config.h.cmake  config.h.in  configure.ac  configure.cmd  miktex-config.in  miktex-version.cmake  miktex.mak  miktexstartup.ini.debug.in
Admin/ConfigFiles/: CMakeLists.txt  context.ini  context.ini.body  core.ini  cslatex.ini.body  csplain.ini.body  dvilualatex.ini.body  dviluatex.ini.body  dvipdfm-common.ini  dvipdfm-common.ini.body  dvipdfm.ini  dvips.ini  dvips.ini.body  etex.ini  formats-context.ini.body  formats.ini  formats.ini.body  jadetex.ini  lambda.ini  latex.ini  latex.ini.body  lualatex.ini.body  luatex.ini.body  mex.ini.body  miktex.mak  mllatex.ini  mltex.ini  omega.ini  pdfetex.ini  pdfjadetex.ini  pdflatex.ini  pdfmex.ini  pdfplatex.ini  pdftex.ini  pdftex.ini.body  pdftexinfo.ini  t4ht.ini  t4ht.ini.body  tex4ht.ini.body  ttf2tfm.ini  (+3 more)
BuildUtilities/c4p/: CMakeLists.txt  c4p-version.h  c4p.rc  common.h  gram.y  initgram.c  initgram.h  initscan.c  main.c  main.cpp  miktex.mak  misc.c  misc.cpp  output.c  scan.l  subrange.cpp  symtab.c  symtab.cpp  type.c  type.cpp
BuildUtilities/c4p/test/: test.p  test_.c  test_.h
BuildUtilities/cweb/: CMakeLists.txt  README  c++lib.w  comm-w2c.ch  common-miktex.ch  common.h  common.w  ctang-w2c.ch  ctangle-version.h  ctangle.rc  ctangle.w  cweav-w2c.ch  cweave-version.h  cweave.rc  cweave.w  cweb.1  cwebmac.tex  cwebman.tex  initcommon.c  initctangle.c  initcweb.h  miktex.mak
BuildUtilities/etc/: CMakeLists.txt  Makefile.am  bintoc.cpp  install.cmd  j2000.cpp  miktex.mak  mkdllbases.cpp  rmtree.perl  runhhc.perl.in  runxsltproc.perl.in
BuildUtilities/md5walk/: CMakeLists.txt  md5walk-version.h  md5walk.cpp  md5walk.rc  miktex.mak
BuildUtilities/tie/: CMakeLists.txt  miktex.mak  tie-miktex.ch
BuildUtilities/touch/: CMakeLists.txt  touch-version.h  touch.cpp  touch.rc
Documentation/: CMakeLists.txt  Makefile.am  changes.xml  entities.ent  faq.xml  install.xml  license.xml  local.txt  miktex-tools.txt  miktex.mak  miktex.xml  news.xml  packaging.xml  preview.xml  refman.xml  relnotes.xml  roadmap.xml
Documentation/EnvVars/: MIKTEX_TRACE.xml
Documentation/Manual/: basicsetup.xml  configuring.xml  features.xml  installation-instructions.xml  installing.xml  intro.xml  localguide.xml  miktexini.xml  netsetup.xml  pdftexcfg.xml  prerequisites.xml  printing.xml  texfeatures.xml  texifying.xml  tracestreams.xml  updmapcfg.xml
Documentation/News/: news-2.5.xml
Documentation/Options/: alias.xml  auxdirectory.xml  bistacksize.xml  bufsize.xml  cstyleerrors.xml  disableinstaller.xml  disablepipes.xml  disablewriteeighteen.xml  dontparsefirstline.xml  enableinstaller.xml  enablepipes.xml  enablewriteeighteen.xml  errorline.xml  fontmax.xml  fontmemsize.xml  halferrorline.xml  haltonerror.xml  includedirectory.xml  initialize.xml  interaction.xml  jobname.xml  jobtime.xml  ligtablesize.xml  maxinopen.xml  maxprintline.xml  maxstrings.xml  maxwiggle.xml  membot.xml  memmax.xml  memmin.xml  memtop.xml  mltex.xml  movesize.xml  nestsize.xml  nocstyleerrors.xml  outputdirectory.xml  paramsize.xml  parsefirstline.xml  pathsize.xml  poolsize.xml  (+17 more)
Documentation/Ref/: bibtex.xml  dvicopy.xml  dvips.xml  dvispool.xml  etex.xml  findtexmf.xml  gftodvi.xml  initexmf.xml  mf.xml  miktex-tools.xml  mpm.xml  mpost.xml  mthelp.xml  mtprint.xml  omega.xml  pdfetex.xml  pdftex.xml  pdftexcfg.xml  setupwiz.xml  tex.xml  texify.xml  updmapcfg.xml  xetex.xml
Documentation/Styles/: db2latex-common.xsl  db2latex-common.xsl.in  db2latex-install.xsl  db2latex-manual.xsl  db2latex-preview.xsl  html.xsl  htmlchunk.xsl  www.xsl  wwwchunk.xsl
Libraries/3rd/botan-static/: CMakeLists.txt
Libraries/3rd/bzip2/: CMakeLists.txt  Makefile.am  bzlib_private.h  libbz2-version.h  libbz2.rc  libbz2.rc.in  miktex.mak
Libraries/3rd/bzip2-static/: CMakeLists.txt  miktex.mak
Libraries/3rd/cairo/: CMakeLists.txt  cairo.rc.in  features.cmake  miktex-cairo-version.h  sources.cmake
Libraries/3rd/freetype2/: CMakeLists.txt  freetype2-version.h  freetype2.rc  freetype2.rc.in
Libraries/3rd/getopt/: CMakeLists.txt  getopt-version.h  getopt.c  getopt.h  getopt.rc.in  getopt1.c  regex.c
Libraries/3rd/getopt-static/: CMakeLists.txt
Libraries/3rd/getopt/include/: getopt.h
Libraries/3rd/graphite2/: CMakeLists.txt  graphite2-version.h  graphite2.rc.in
Libraries/3rd/graphite2/src/: CMakeLists.txt
Libraries/3rd/harfbuzz-static/: CMakeLists.txt
Libraries/3rd/hunspell/: CMakeLists.txt  hunspell-version.h  hunspell.rc.in
Libraries/3rd/libbmeps/: CMakeLists.txt  README  bmeps-version.h  bmeps.c  bmeps.h  bmeps.rc  bmepsco.h  bmepsm.c  bmepsoe.c  bmepsoe.h  bsdlic.txt  jpgeps.c  jpgeps.h  libbmeps-version.h  libbmeps.def  libbmeps.rc  libbmeps.rc.in  miktex.mak  pngeps.c  pngeps.h  pnmeps.c  pnmeps.h
Libraries/3rd/libcurl/: CMakeLists.txt  arpa_telnet.h  base64.c  base64.h  config-win32.h  connect.c  connect.h  content_encoding.c  content_encoding.h  cookie.c  cookie.h  curl-version.h  curl.rc  curl.rc.in  dict.c  dict.h  easy.c  easyif.h  escape.c  escape.h  file.c  file.h  formdata.c  formdata.h  ftp.c  ftp.h  getenv.c  getinfo.c  getinfo.h  gtls.c  gtls.h  hash.c  hash.h  hostares.c  hostasyn.c  hostip.c  hostip.h  hostip4.c  hostip6.c  hostsyn.c  (+67 more)
Libraries/3rd/libcurl-static/: CMakeLists.txt  miktex.mak
Libraries/3rd/libexpat/: CMakeLists.txt  Makefile.am  expat-version.h  expat.rc  expat.rc.in  expat_config.h.cmake  miktex.mak
Libraries/3rd/libexpat-static/: CMakeLists.txt  miktex.mak
Libraries/3rd/libgd/: CMakeLists.txt  config.h.cmake  entities.h  gd-version.h  gd.c  gd.h  gd.rc  gd.rc.in  gd_gd2.c  gd_gif_in.c  gd_gif_out.c  gd_io.h  gd_io_dp.c  gd_jpeg.c  gd_png.c  gd_topal.c  gd_wbmp.c  gdcache.c  gdcache.h  gdfontg.h  gdfontl.h  gdfontmb.h  gdfonts.h  gdfontt.h  gdft.c  gdfx.c  gdfx.h  gdhelpers.c  gdhelpers.h  gdkanji.c  gdxpm.c  jisx0208.h  miktex.mak  wbmp.c  wbmp.h
m4/: acx_pthread.m4  (+4 more)
(+4074 files in other folders)
